--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ header {
 
 .navbar-toggler i {
     font-size: 2rem;
-    color: #fff;
+    color: #3b424f;
 }
 
 .navbar-close {
@@ -66,7 +66,6 @@ header {
     font-size: 2rem;
     cursor: pointer;
 }
-
 
 nav {
     position: fixed;
@@ -96,6 +95,10 @@ nav ul li a {
     font-weight: 700;
 }
 
+nav ul li a.active {
+    color: #01539c;
+}
+
 .menucontact {
     margin-top: 50px;
 }
@@ -123,13 +126,13 @@ nav ul li a {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 500;
     letter-spacing: 0.07em;
-    color: #ffffff;
+    color: #3b424f;
     text-transform: uppercase;
     display: none;
 }
 
 .headersocial a {
-    color: #ffffff;
+    color: #3b424f;
 }
 
 .container {
