--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,8 @@ a {
     justify-content: center;
     height: 100%;
     width: 100%;
-    position: absolute;
-    top: 0;
+    position: relative;
+    margin-top: 3rem;
 }
 
 header {
@@ -437,18 +437,18 @@ p.intro {
 }
 
 .client-logo img {
-    width: 100px;
+    width: 90px;
     height: 50px;
     object-fit: contain;
     background: #fff;
-    padding: 1rem;
+    padding: 0.8rem;
     box-shadow: 1px 1px 10px 1px rgb(59, 66, 79, 0.3);
     display: block;
 }
 
 .d-flex {
     display: flex;
-    grid-gap: 2rem;
+    grid-gap: 1rem;
     justify-content: center;
     align-items: center;
 }
@@ -548,7 +548,7 @@ footer {
 
 p.contact {
     font-family: 'Montserrat', sans-serif;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     font-weight: 500;
     text-transform: uppercase;
     margin: 2rem 0;
